Bug 1163212 - The resize event should not be cancelable. r=masayuki, a=lizzard

--HG--
extra : rebase_source : 4e70369c3437f8fc0c0ef8b725429ae7fd3ff396